allow customizing gunicorn worker count; dont override instance type for web LC creation; save on AWS API calls by only calling environment fab commands once (instead of once per server)

--- a/docs/sample_files/fabulaws-config.yaml
+++ b/docs/sample_files/fabulaws-config.yaml
@@ -75,6 +75,9 @@ static_hosting: remote
 celery_workers:
   main: -c 10 -Q celeryd
 
+# Start this many Gunicorn workers for each CPU core
+gunicorn_worker_multipler: 8
+
 # Mapping of environment names to domain names. Used to update the
 # primary site in the database after a refresh and to set ALLOWED_HOSTS
 # Note that the first domain in the list must not be a wildcard as it
