--- a/docs/sample_files/fabulaws-config.yaml
+++ b/docs/sample_files/fabulaws-config.yaml
@@ -38,6 +38,14 @@ static_html:
   healthcheck_override: deployment/templates/html/healthcheck.html
 localsettings_template: deployment/templates/local_settings.py
 logstash_config: deployment/templates/logstash.conf
+
+# Set syslog_server to a "hostname:port" (quote marks required due
+# to the ":" in there) and server logs will be forwarded there using
+# syslog protocol.  "hostname:port" could be e.g. papertrail or a
+# similar service.
+# (You might want to set this in fabsecrets instead of here.)
+# syslog_server: "hostname:port"
+
 backup_key_fingerprint:
 vcs_cmd: git # or hg
 latest_changeset_cmd: git rev-parse HEAD # hg id -i # or git rev-parse HEAD
