--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py36,py37,py38
+envlist = py38
 [testenv]
 deps = flake8
 # We don't care so much that we're strictly pep-8 compliant (for now).
