--- a/tox.ini
+++ b/tox.ini
@@ -5,4 +5,4 @@ deps = flake8
 # We don't care so much that we're strictly pep-8 compliant (for now).
 # We do care that our code is syntactically correct for the Python version in use.
 commands =
-    flake8 --select E999,F407,F621,F633,F7 --exclude .tox,docs/sample_files/local_settings.py
+    flake8 --select E999,F407,F621,F633,F7 --exclude .tox,venv,docs/sample_files/local_settings.py
