--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ boto3
 pyyaml
 awacs==0.5.4
 troposphere==2.6.1
-flake8==3.4.1
-isort==4.2.15
+flake8==3.8.3
+isort==5.3.2
+black==19.10b0
+pre-commit==2.6.0
