--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
     - id: check-added-large-files
     - id: check-json
 - repo: https://github.com/psf/black
-  rev: 19.10b0
+  rev: 22.6.0
   hooks:
     - id: black
 - repo: https://github.com/timothycrosley/isort
