refs #sc-17085 updates to the new home of flake8

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
   rev: 5.3.2
   hooks:
     - id: isort
-- repo: https://gitlab.com/pycqa/flake8
+- repo: https://github.com/pycqa/flake8
   rev: 3.8.3
   hooks:
     - id: flake8
